--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "vite",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -11,8 +11,10 @@
     "hono": "^4.11.4"
   },
   "devDependencies": {
+    "@hono/vite-dev-server": "^0.24.1",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^7.3.1"
   }
 }
