--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc",
+    "vitest": "vitest",
     "start": "node dist/index.js"
   },
   "dependencies": {
